--- a/bit-shop-front/src/app/components/home/home.component.html
+++ b/bit-shop-front/src/app/components/home/home.component.html
@@ -15,7 +15,7 @@
           <div>
             <img
               class="img-fluid rounded-top"
-              src="../../../assets/img/chompoPercho.jpg"
+              src="assets/img/chompoPercho.jpg"
               alt="producto"
             />
           </div>
