--- a/bit-shop-front/src/app/app.component.html
+++ b/bit-shop-front/src/app/app.component.html
@@ -11,7 +11,7 @@
       aria-expanded="false"
       aria-label="Toggle navigation"
     >
-      <i class="fas fa-bars">Icon</i>
+      <i class="fas fa-bars"></i>
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
