--- a/bit-shop-front/src/styles.css
+++ b/bit-shop-front/src/styles.css
@@ -9,4 +9,9 @@
 
 .card-size {
     width: 12rem;
-}
+}@import '~@fortawesome/fontawesome-free/scss/fontawesome.scss';
+@import '~@fortawesome/fontawesome-free/scss/solid.scss';
+@import '~@fortawesome/fontawesome-free/scss/regular.scss';
+@import '~@fortawesome/fontawesome-free/scss/brands.scss';
+ 
+@import '~mdb-angular-ui-kit/assets/scss/mdb.scss';
