--- a/bit-shop-front/src/app/components/login/login.component.html
+++ b/bit-shop-front/src/app/components/login/login.component.html
@@ -3,21 +3,21 @@
 
     <h4 class="text-muted text-center mb-5">Iniciar Sesión</h4>
 
-    <form #loginForm="ngForm" (ngSubmit)="login(loginForm)">
+    <form #loginForm="ngForm">
       <!-- Email input -->
       <div class="mb-4">
-        <input type="email" name="email" class="form-control" />
+        <input type="email" name="email" #email="ngModel" [(ngModel)]="loginService.selectedUser.email" class="form-control" />
         <label class="form-label" for="form1Example1">Correo Electronico</label>
       </div>
 
       <!-- Password input -->
       <div class="mb-4">
-        <input type="password" name="password" class="form-control" />
+        <input type="password" name="password" #password="ngModel" [(ngModel)]="loginService.selectedUser.password" class="form-control" />
         <label class="form-label" for="form1Example2">Contraseña</label>
       </div>
 
       <!-- Submit button -->
-      <button type="submit" class="btn bg-yellow text-white btn-block" >
+      <button type="submit" class="btn bg-yellow text-white btn-block" (click)="login(loginForm)">
         Iniciar Sesion
       </button>
     </form>
