--- a/bit-shop-as/src/app/components/navbar/navbar.component.html
+++ b/bit-shop-as/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
+    <a class="navbar-brand" href="/home">Bit-shop</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -14,13 +14,16 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
       <div class="navbar-nav">
-        <a class="nav-link active" aria-current="page" href="#">Home</a>
-        <a class="nav-link" href="#">Features</a>
-        <a class="nav-link" href="#">Pricing</a>
-        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true"
-          >Disabled</a
-        >
+        <a class="nav-link" aria-current="page" href="#">Productos</a>
+        <a class="nav-link" href="#">Faq</a>
+        <a class="nav-link" href="#">Admin</a>
       </div>
+
+      <div class="navbar-nav ms-auto">
+        <a class="btn btn-primary me-2" href="#">Iniciar Sesion</a>
+        <a class="btn btn-primary" href="#">Registrarse</a>
+      </div>
+
     </div>
   </div>
 </nav>
