--- a/bit-shop-as/src/app/components/navbar/navbar.component.html
+++ b/bit-shop-as/src/app/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
+<nav class="navbar navbar-expand-lg navbar-dark bg-purple-pastel">
   <div class="container-fluid">
     <a class="navbar-brand" href="/home">Bit-shop</a>
     <button
@@ -20,10 +20,9 @@
       </div>
 
       <div class="navbar-nav ms-auto">
-        <a class="btn btn-primary me-2" href="#">Iniciar Sesion</a>
-        <a class="btn btn-primary" href="#">Registrarse</a>
+        <a class="btn btn-outline-light m-2" href="#">Iniciar Sesion</a>
+        <a class="btn btn-outline-light m-2" href="#">Registrarse</a>
       </div>
-
     </div>
   </div>
 </nav>
