--- a/bit-shop-as/src/app/components/login/login.component.html
+++ b/bit-shop-as/src/app/components/login/login.component.html
@@ -1,7 +1,7 @@
 <section class="mt-4">
 
     <div class="row w-100">
-        <div class="col-lg-5 d-flex align-items-center justify-content-center">
+        <div class="col-lg-5 py-5 d-flex align-items-center justify-content-center">
             
             <div class="p-5 shadow-lg rounded w-75">
 
@@ -18,7 +18,7 @@
                       <input type="password" class="form-control" id="exampleInputPassword1">
                     </div>
                     <div class="text-center mt-5">
-                        <button type="submit" class="btn bg-purple-pastel text-white text-center">Iniciar Sesion</button>
+                        <button class="btn bg-purple-pastel text-white text-center" (click)="login()">Iniciar Sesion</button>
                     </div>
                   </form>
 
@@ -26,8 +26,8 @@
 
         </div>
     
-        <div class="col-lg-7 bg-success bg-image">
-            
+        <div class="col-lg-7 bg-image">
+
         </div>
     
     </div>
