--- a/bit-shop-as/src/app/components/navbar/navbar.component.html
+++ b/bit-shop-as/src/app/components/navbar/navbar.component.html
@@ -19,10 +19,25 @@
         <a class="nav-link" href="#">Admin</a>
       </div>
 
-      <div class="navbar-nav ms-auto">
-        <a class="btn btn-outline-light m-2" href="#">Iniciar Sesion</a>
-        <a class="btn btn-outline-light m-2" href="#">Registrarse</a>
+      <div class="navbar-nav ms-auto" *ngIf="!token else usserLogged">
+        <a class="btn btn-outline-light m-2" href="/login">Iniciar Sesion</a>
+        <a class="btn btn-outline-light m-2" href="/register">Registrarse</a>
       </div>
+
+      <ng-template #usserLogged> 
+        <div class="navbar-nav ms-auto">
+            <a class="btn btn-outline-light dropdown-toggle" data-bs-toggle="dropdown" aria-expanded="false">
+                {{ user }}
+            </a>
+              <ul class="dropdown-menu dropdown-menu-end">
+                <li><button class="dropdown-item" type="button">Opciones</button></li>
+                <li><button class="dropdown-item" type="button">Mis compras</button></li>
+                <hr>
+                <li><button class="dropdown-item" type="button">Cerrar Sesion</button></li>
+              </ul>
+          </div>
+      </ng-template>
+
     </div>
   </div>
 </nav>
